--- a/copy_with_extension_gen/pubspec.yaml
+++ b/copy_with_extension_gen/pubspec.yaml
@@ -5,6 +5,8 @@ repository: https://github.com/numen31337/copy_with_extension
 homepage: https://github.com/numen31337/copy_with_extension/tree/master/copy_with_extension_gen
 issue_tracker: https://github.com/numen31337/copy_with_extension/issues
 
+publish_to: none
+
 environment:
   sdk: ">=3.0.0 <4.0.0"
 
@@ -12,7 +14,8 @@ dependencies:
   analyzer: ">=2.0.0 <6.0.0"
   build: ^2.0.0
   source_gen: ^1.0.0
-  copy_with_extension: ^5.0.0
+  copy_with_extension:
+    path: ../copy_with_extension
   meta: ^1.8.0
 
 dev_dependencies:
