--- a/copy_with_extension_gen/pubspec.yaml
+++ b/copy_with_extension_gen/pubspec.yaml
@@ -11,19 +11,19 @@ environment:
   sdk: ">=3.0.0 <4.0.0"
 
 dependencies:
-  analyzer: ">=2.0.0 <6.0.0"
-  build: ^2.0.0
-  source_gen: ^1.0.0
+  analyzer: ">=5.13.0"
+  build: ^2.4.0
+  source_gen: ^1.3.2
   copy_with_extension:
     git:
       url: https://github.com/rasitayaz/dart-copy-with-extension
       ref: dev
       path: copy_with_extension
-  meta: ^1.8.0
+  meta: ^1.9.1
 
 dev_dependencies:
   equatable: ^2.0.5
   flutter_lints: ^2.0.1
-  build_runner: ">=1.11.5 <3.0.0"
-  test: ^1.20.1
-  source_gen_test: ^1.0.1
+  build_runner: ">=2.4.5"
+  test: ^1.24.3
+  source_gen_test: ^1.0.5
